--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 easydict
-# h5py==3.5.0
-# matplotlib==3.4.3
+h5py==3.5.0
+matplotlib==3.4.3
 nibabel
 # numpy==1.21.3
-# open3d==0.10.0.0
+open3d==0.10.0.0
 scipy
 # torch==1.8.1+cu111
 # tqdm==4.62.3
